# qshell

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: simple.rs
qcmd/: Cargo.toml
qcmd/src/: lib.rs
qshell/: Cargo.toml  README.md
qshell/src/: lib.rs  qcmd.rs
qshell/tests/: smoke.rs
sh/: Cargo.toml  README.md
sh-macro/: Cargo.toml
sh-macro/src/: lib.rs
sh/src/: lib.rs
sh/tests/: smoke.rs
src/: lib.rs
