[package]
name = "qshell"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "macro", "shell"]
description = "Macro for easily running commands"
repository = "https://github.com/adsnaider/sh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sh-macro = { version = "0.1.0", path = "../sh-macro" }
