[package]
name = "sh-macro"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["cli", "macro", "shell"]
description = "Macro for easily running commands"
repository = "https://github.com/adsnaider/sh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
litrs = "0.4"
qcmd = { version = "0.1.1", path = "../qcmd" }
