[package]
name = "sh"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "macro", "shell"]
description = "Macro for easily running commands"
repository = "https://github.com/adsnaider/sh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sh-macro = { version = "0.2.0", path = "../sh-macro" }
thiserror = "1.0"
